# docs/openapi.yaml
@@ -27,6 +27,11 @@ paths:
       responses:
         "200":
           description: Default Response
+  /users:
+    get:
+      responses:
+        "200":
+          description: Default Response
   /me:
     get:
       responses:
